package com.apromore.compliance_centre.process;

import org.springframework.data.repository.CrudRepository;

public interface ProcessRepository extends CrudRepository<ProcessModel, Long> {}
