package com.apromore.compliance_centre.process.attributes;

public enum AttributeType {
    ATTRIBUTE, CASE_ID, ACTIVITY, RESOURCE, ROLE, START_TIMESTAMP, COMPLETE_TIMESTAMP, CASE_ATTRIBUTE, EVENT_ATTRIBUTE, IGNORE_ATTRIBUTE,
}
